--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <section class="main-logo">
-            <img src="" alt="">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="logo" height="92" width="272">
         </section>
         <section class="main-input">
             <div class="main-input-container">
